--- a/staffmeals.html
+++ b/staffmeals.html
@@ -128,9 +128,58 @@
       text-align: center;
       white-space: nowrap;
     }
+
+    /* Hamburger button */
+.hamburger {
+  display: none;
+  font-size: 2rem;
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #c82333; /* Burger Shot red */
+  margin: 1rem;
+  z-index: 2000;
+  position: fixed;
+  top: 10px;
+  left: 10px;
+}
+
+/* Sidebar adjustments for mobile */
+@media (max-width: 768px) {
+  .hamburger {
+    display: block; /* show hamburger on small screens */
+  }
+
+  .sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 220px;
+    background-color: #c82333;
+    transform: translateX(-100%); /* hidden */
+    transition: transform 0.3s ease;
+    z-index: 1500;
+  }
+
+  .sidebar.active {
+    transform: translateX(0); /* slide in */
+  }
+
+  /* Make sure main content isn’t squeezed */
+  .main-container {
+    flex-direction: column;
+  }
+  main {
+    padding: 1rem;
+    margin-left: 0;
+  }
+}
   </style>
 </head>
 <body>
+  <button id="menuToggle" class="hamburger">☰</button>
+  <div class="main-container" style="display:flex; width:100%; min-height:100vh;">
   <aside class="sidebar">
     <h2>🍔 Burger Shot</h2>
     <nav>
@@ -161,6 +210,7 @@
         <option value="Munch">Munch</option>
         <option value="Slade">Slade</option>
         <option value="Jack">Jack</option>
+        <option value="Tyrod">Tyrod</option>
       </select>
     </div>
 
@@ -338,5 +388,14 @@
 
     document.getElementById('submitMeal').addEventListener('click', submitStaffMeal);
   </script>
+<script>
+  const menuBtn = document.getElementById("menuToggle");
+  const sidebar = document.querySelector(".sidebar");
+
+  menuBtn.addEventListener("click", () => {
+    sidebar.classList.toggle("active");
+  });
+</script>  
+
 </body>
 </html>
