--- a/inventory.html
+++ b/inventory.html
@@ -209,9 +209,103 @@
   font-weight: 600;
 }
 
+.hamburger {
+  display: none;
+  font-size: 2rem;
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #c82333; /* Burger Shot red */
+  margin: 1rem;
+  z-index: 2000;
+  position: fixed;
+  top: 10px;
+  left: 10px;
+}
+
+/* Sidebar adjustments for mobile */
+@media (max-width: 768px) {
+  .hamburger {
+    display: block; /* show hamburger on small screens */
+  }
+
+  .sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 220px;
+    background-color: #c82333;
+    transform: translateX(-100%); /* hidden */
+    transition: transform 0.3s ease;
+    z-index: 1500;
+  }
+
+  .sidebar.active {
+    transform: translateX(0); /* slide in */
+  }
+
+  /* Make sure main content isn’t squeezed */
+  .main-container {
+    flex-direction: column;
+  }
+  main {
+    padding: 1rem;
+    margin-left: 0;
+  }
+}
+
+/* Hamburger button */
+.hamburger {
+  display: none;
+  font-size: 2rem;
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #c82333; /* Burger Shot red */
+  margin: 1rem;
+  z-index: 2000;
+  position: fixed;
+  top: 10px;
+  left: 10px;
+}
+
+/* Sidebar adjustments for mobile */
+@media (max-width: 768px) {
+  .hamburger {
+    display: block; /* show hamburger on small screens */
+  }
+
+  .sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 220px;
+    background-color: #c82333;
+    transform: translateX(-100%); /* hidden */
+    transition: transform 0.3s ease;
+    z-index: 1500;
+  }
+
+  .sidebar.active {
+    transform: translateX(0); /* slide in */
+  }
+
+  /* Make sure main content isn’t squeezed */
+  .main-container {
+    flex-direction: column;
+  }
+  main {
+    padding: 1rem;
+    margin-left: 0;
+  }
+}
+
   </style>
 </head>
 <body>
+  <button id="menuToggle" class="hamburger">☰</button>
   <aside class="sidebar">
     <h2>🍔 Burger Shot</h2>
     <nav>
@@ -291,83 +385,123 @@
 
   <div id="notification"></div>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
-    import {
-      getFirestore,
-      doc,
-      getDoc,
-      updateDoc,
-      onSnapshot,
-      setDoc
-    } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore.js";
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
+import {
+  getFirestore,
+  doc,
+  getDoc,
+  updateDoc,
+  onSnapshot,
+  setDoc
+} from "https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyBgsHAYXZeLIv-vC0LCHbNHjOTrZOq3GBA",
-      authDomain: "burgershotorders.firebaseapp.com",
-      projectId: "burgershotorders",
-      storageBucket: "burgershotorders.appspot.com",
-      messagingSenderId: "244133569976",
-      appId: "1:244133569976:web:0dcca3439958188439db4d",
-      measurementId: "G-2X69N31D9Q"
-    };
+const firebaseConfig = {
+  apiKey: "AIzaSyBgsHAYXZeLIv-vC0LCHbNHjOTrZOq3GBA",
+  authDomain: "burgershotorders.firebaseapp.com",
+  projectId: "burgershotorders",
+  storageBucket: "burgershotorders.appspot.com",
+  messagingSenderId: "244133569976",
+  appId: "1:244133569976:web:0dcca3439958188439db4d",
+  measurementId: "G-2X69N31D9Q"
+};
 
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
 
-    const UNIT_PER_PACK = 5;
-    const inventoryDocRef = doc(db, "inventory", "current");
+const UNIT_PER_PACK = 5;
+const inventoryDocRef = doc(db, "inventory", "current");
 
-    async function fetchInventory() {
-      try {
-        const docSnap = await getDoc(inventoryDocRef);
-        if (docSnap.exists()) {
-          const data = docSnap.data();
-          renderInventoryFromData(data);
-        } else {
-          console.log("No inventory document found, initializing empty.");
-          const emptyData = {};
-          await setDoc(inventoryDocRef, emptyData);
-          renderInventoryFromData(emptyData);
-          renderComboCounts(data);
-          renderItemCounts(data);
+/* === Recipes === */
+const comboRecipes = {
+  "Bleeder Box": {
+    burger_buns: 5,
+    ground_beef: 5,
+    cheese_slices: 5,
+    potato: 10,
+    corn_syrup: 10,
+    sugar: 1,
+    flour: 1
+  },
+  "Patty Pounder Combo": {
+    burger_buns: 5,
+    ground_beef: 5,
+    lettuce: 5,
+    corn_syrup: 5,
+    sugar: 1,
+    flour: 1
+  },
+  "Heart Stopper Meal": {
+    burger_buns: 5,
+    ground_beef: 15,
+    cheese_slices: 5,
+    potato: 10,
+    corn_syrup: 10,
+    sugar: 1,
+    flour: 1
+  }
+};
 
-        }
-      } catch (error) {
-        console.error("Error fetching inventory:", error);
-        showNotification("Failed to load inventory from server.");
-      }
+const itemRecipes = {
+  "Bleeder": { burger_buns: 1, ground_beef: 1, cheese_slices: 1 },
+  "Double Shot": { burger_buns: 1, ground_beef: 1, lettuce: 1 },
+  "Heart Stopper": { burger_buns: 5, ground_beef: 15, cheese_slices: 5 },
+  "Fries": { potato: 2 },
+  "Soda": { corn_syrup: 1 },
+  "Dessert": { sugar: 1, flour: 1 }
+};
+
+/* === Ingredient Labels === */
+const ingredientLabels = {
+  burger_buns: "Burger Buns",
+  ground_beef: "Ground Beef / Patties",
+  cheese_slices: "Cheddar Cheese Slices",
+  potato: "Potatoes",
+  lettuce: "Lettuce",
+  corn_syrup: "Corn Syrup",
+  sugar: "Sugar",
+  flour: "Flour"
+};
+
+/* === Inventory Fetching === */
+async function fetchInventory() {
+  try {
+    const docSnap = await getDoc(inventoryDocRef);
+    if (docSnap.exists()) {
+      const data = docSnap.data();
+      renderInventoryFromData(data);
+      renderComboCounts(data);
+      renderItemCounts(data);
+    } else {
+      const emptyData = {};
+      await setDoc(inventoryDocRef, emptyData);
+      renderInventoryFromData(emptyData);
+      renderComboCounts(emptyData);
+      renderItemCounts(emptyData);
     }
+  } catch (error) {
+    console.error("Error fetching inventory:", error);
+    showNotification("Failed to load inventory from server.");
+  }
+}
 
-    onSnapshot(inventoryDocRef, (docSnap) => {
-      if (docSnap.exists()) {
-        const data = docSnap.data();
-        renderInventoryFromData(data);
-        renderComboCounts(data);
-        renderItemCounts(data);
-      }
-    });
+onSnapshot(inventoryDocRef, (docSnap) => {
+  if (docSnap.exists()) {
+    const data = docSnap.data();
+    renderInventoryFromData(data);
+    renderComboCounts(data);
+    renderItemCounts(data);
+  }
+});
 
-    function formatPacks(units) {
-      const packs = Math.floor(units / UNIT_PER_PACK);
-      const leftover = units % UNIT_PER_PACK;
-      let text = '';
-      if (packs > 0) text += `${packs} pack${packs > 1 ? 's' : ''}`;
-      if (leftover > 0) {
-        if (packs > 0) text += ` + ${leftover} loose`;
-        else text += `${leftover} loose`;
-      }
-      if (text === '') text = '0';
-      return text;
-    }
-
-   function renderInventoryFromData(inventory) {
+/* === Table Rendering === */
+function renderInventoryFromData(inventory) {
   const tbody = document.getElementById('inventoryTableBody');
   tbody.innerHTML = '';
 
   const ingredients = [
     { key: 'burger_buns', label: 'Burger Buns' },
-    { key: 'ground_beef', label: 'Ground Beef / Patties', isPack: true },
+    { key: 'ground_beef', label: 'Ground Beef / Patties' },
     { key: 'sugar', label: 'Sugar' },
     { key: 'flour', label: 'Flour' },
     { key: 'corn_syrup', label: 'Corn Syrup' },
@@ -376,54 +510,37 @@
     { key: 'lettuce', label: 'Lettuce' }
   ];
 
-  ingredients.forEach(({ key, label, isPack }) => {
+  ingredients.forEach(({ key, label }) => {
     const units = inventory[key] || 0;
     const tr = document.createElement('tr');
-
-    tr.innerHTML = `
-      <td>${label}</td>
-      <td>${units}</td>
-    `;
+    tr.innerHTML = `<td>${label}</td><td>${units}</td>`;
     tbody.appendChild(tr);
   });
 }
 
+/* === Combo Availability === */
 function calculateCombos(inventory) {
-  const comboRecipes = {
-    "Bleeder Box": {
-      burger_buns: 5,
-      ground_beef: 5,
-      cheese_slices: 5,
-      potato: 10,   // fries (2 × 5)
-      corn_syrup: 10,
-      sugar: 1,
-      flour: 1
-    },
-    "Patty Pounder Combo": {
-      burger_buns: 5,
-      ground_beef: 5,
-      lettuce: 5,
-      corn_syrup: 5,
-      sugar: 1,
-      flour: 1
-    },
-    "Heart Stopper Meal": {
-      burger_buns: 5,
-      ground_beef: 15,
-      cheese_slices: 5,
-      potato: 10   // 5 fries
-    }
-  };
-
   const results = {};
   for (const [comboName, recipe] of Object.entries(comboRecipes)) {
     let possible = Infinity;
+    let limiting = [];
+
     for (const [ingredient, qty] of Object.entries(recipe)) {
       const available = inventory[ingredient] || 0;
       const maxFromThis = Math.floor(available / qty);
-      possible = Math.min(possible, maxFromThis);
+
+      if (maxFromThis < possible) {
+        possible = maxFromThis;
+        limiting = [ingredient];
+      } else if (maxFromThis === possible) {
+        limiting.push(ingredient);
+      }
     }
-    results[comboName] = possible === Infinity ? 0 : possible;
+
+    results[comboName] = {
+      count: possible === Infinity ? 0 : possible,
+      limiting
+    };
   }
   return results;
 }
@@ -432,16 +549,36 @@ function renderComboCounts(inventory) {
   const container = document.getElementById("comboCounts");
   const combos = calculateCombos(inventory);
 
-  const comboEntries = Object.entries(combos).map(
-    ([name, count]) => `${count} ${name}${count !== 1 ? "'s" : ""}`
-  );
+  const comboEntries = Object.entries(combos).map(([name, { count, limiting }]) => {
+    let reasons = "";
+    if (limiting.length) {
+      const labels = limiting.map(l => ingredientLabels[l] || l).join(", ");
+      reasons = `<br><span style="color:#c82333; font-weight:600;">⚠️ Limited by: ${labels}</span>`;
+    }
+    return `<li>${count} ${name}${count !== 1 ? "'s" : ""}${reasons}</li>`;
+  });
 
   container.innerHTML = `
     <h3>Combo Availability</h3>
-    <p style="font-weight:600; color:#333;">
-      ${comboEntries.join(" <br><br>OR<br><br> ")}
-    </p>
+    <ul style="list-style:none; padding-left:0; margin:0;">
+      ${comboEntries.join("")}
+    </ul>
   `;
+}
+
+/* === Item Availability === */
+function calculateItems(inventory) {
+  const results = {};
+  for (const [itemName, recipe] of Object.entries(itemRecipes)) {
+    let possible = Infinity;
+    for (const [ingredient, qty] of Object.entries(recipe)) {
+      const available = inventory[ingredient] || 0;
+      const maxFromThis = Math.floor(available / qty);
+      possible = Math.min(possible, maxFromThis);
+    }
+    results[itemName] = possible === Infinity ? 0 : possible;
+  }
+  return results;
 }
 
 function renderItemCounts(inventory) {
@@ -460,119 +597,86 @@ function renderItemCounts(inventory) {
   `;
 }
 
+/* === Notification === */
+function showNotification(message, duration = 4000) {
+  const notification = document.getElementById('notification');
+  notification.textContent = message;
+  notification.style.display = 'block';
+  notification.style.opacity = '1';
 
-function calculateItems(inventory) {
-  const itemRecipes = {
-    "Bleeder": {
-      burger_buns: 1,
-      ground_beef: 1,
-      cheese_slices: 1
-    },
-    "Double Shot": {
-      burger_buns: 1,
-      ground_beef: 2,
-      lettuce: 1
-    },
-    "Heart Stopper": {
-      burger_buns: 5,
-      ground_beef: 15,
-      cheese_slices: 5
-    }, // 👈 added comma here
-    "Fries": {
-      potato: 2
-    },
-    "Soda": {
-      corn_syrup: 1
-    },
-    "Dessert": {
-      sugar: 1,
-      flour: 1
-    }
-  };
+  if (showNotification.timeoutId) clearTimeout(showNotification.timeoutId);
 
-  const results = {};
-  for (const [itemName, recipe] of Object.entries(itemRecipes)) {
-    let possible = Infinity;
-    for (const [ingredient, qty] of Object.entries(recipe)) {
-      const available = inventory[ingredient] || 0;
-      const maxFromThis = Math.floor(available / qty);
-      possible = Math.min(possible, maxFromThis);
-    }
-    results[itemName] = possible === Infinity ? 0 : possible;
-  }
-  return results;
+  showNotification.timeoutId = setTimeout(() => {
+    notification.style.transition = 'opacity 0.5s ease';
+    notification.style.opacity = '0';
+    notification.addEventListener('transitionend', () => {
+      notification.style.display = 'none';
+      notification.style.transition = '';
+    }, { once: true });
+  }, duration);
 }
 
-    function showNotification(message, duration = 4000) {
-      const notification = document.getElementById('notification');
-      notification.textContent = message;
-      notification.style.display = 'block';
-      notification.style.opacity = '1';
+/* === Expired Ingredients Modal === */
+document.getElementById('refreshInventory').addEventListener('click', fetchInventory);
 
-      if (showNotification.timeoutId) clearTimeout(showNotification.timeoutId);
+document.getElementById('reportExpiredBtn').addEventListener('click', () => {
+  document.getElementById('expiredModal').style.display = 'flex';
+  document.getElementById('expiredQuantityInput').value = 1;
+  document.getElementById('expiredIngredientSelect').focus();
+});
 
-      showNotification.timeoutId = setTimeout(() => {
-        notification.style.transition = 'opacity 0.5s ease';
-        notification.style.opacity = '0';
+document.getElementById('closeExpiredBtn').addEventListener('click', () => {
+  document.getElementById('expiredModal').style.display = 'none';
+});
 
-        notification.addEventListener('transitionend', () => {
-          notification.style.display = 'none';
-          notification.style.transition = '';
-        }, { once: true });
-      }, duration);
-    }
+document.getElementById('submitExpiredBtn').addEventListener('click', async () => {
+  const ingredientKey = document.getElementById('expiredIngredientSelect').value;
+  const expiredType = document.getElementById('expiredTypeSelect').value;
+  let expiredQty = parseInt(document.getElementById('expiredQuantityInput').value);
 
-    document.getElementById('refreshInventory').addEventListener('click', fetchInventory);
+  if (isNaN(expiredQty) || expiredQty < 1) {
+    showNotification("Please enter a valid expired quantity (1 or more).");
+    return;
+  }
 
-    document.getElementById('reportExpiredBtn').addEventListener('click', () => {
-      document.getElementById('expiredModal').style.display = 'flex';
-      document.getElementById('expiredQuantityInput').value = 1;
-      document.getElementById('expiredIngredientSelect').focus();
+  const docSnap = await getDoc(inventoryDocRef);
+  if (!docSnap.exists()) {
+    showNotification("No inventory to update.");
+    return;
+  }
+
+  const currentInventory = docSnap.data();
+  const currentQty = currentInventory[ingredientKey] || 0;
+  const unitsToRemove = expiredType === 'pack' ? expiredQty * UNIT_PER_PACK : expiredQty;
+
+  if (unitsToRemove > currentQty) {
+    showNotification("Expired quantity cannot exceed current inventory.");
+    return;
+  }
+
+  currentInventory[ingredientKey] = currentQty - unitsToRemove;
+
+  try {
+    await updateDoc(inventoryDocRef, currentInventory);
+    showNotification(`Removed ${unitsToRemove} expired unit${unitsToRemove !== 1 ? 's' : ''} from inventory.`);
+  } catch (error) {
+    console.error("Failed to update inventory in Firestore:", error);
+    showNotification("Failed to update inventory on server.");
+  }
+
+  document.getElementById('expiredModal').style.display = 'none';
+});
+
+/* === Init === */
+fetchInventory();
+</script>
+<script>
+    const menuBtn = document.getElementById("menuToggle");
+    const sidebar = document.querySelector(".sidebar");
+
+    menuBtn.addEventListener("click", () => {
+      sidebar.classList.toggle("active");
     });
-
-    document.getElementById('closeExpiredBtn').addEventListener('click', () => {
-      document.getElementById('expiredModal').style.display = 'none';
-    });
-
-    document.getElementById('submitExpiredBtn').addEventListener('click', async () => {
-      const ingredientKey = document.getElementById('expiredIngredientSelect').value;
-      const expiredType = document.getElementById('expiredTypeSelect').value;
-      let expiredQty = parseInt(document.getElementById('expiredQuantityInput').value);
-
-      if (isNaN(expiredQty) || expiredQty < 1) {
-        showNotification("Please enter a valid expired quantity (1 or more).");
-        return;
-      }
-
-      const docSnap = await getDoc(inventoryDocRef);
-      if (!docSnap.exists()) {
-      showNotification("No inventory to update.");
-      return;
-      }
-const currentInventory = docSnap.data();
-      const currentQty = currentInventory[ingredientKey] || 0;
-      const unitsToRemove = expiredType === 'pack' ? expiredQty * UNIT_PER_PACK : expiredQty;
-
-      if (unitsToRemove > currentQty) {
-        showNotification("Expired quantity cannot exceed current inventory.");
-        return;
-      }
-
-      currentInventory[ingredientKey] = currentQty - unitsToRemove;
-
-      try {
-        await updateDoc(inventoryDocRef, currentInventory);
-        showNotification(`Removed ${unitsToRemove} expired unit${unitsToRemove !== 1 ? 's' : ''} from inventory.`);
-      } catch (error) {
-        console.error("Failed to update inventory in Firestore:", error);
-        showNotification("Failed to update inventory on server.");
-      }
-
-      document.getElementById('expiredModal').style.display = 'none';
-    });
-
-    // Initial fetch
-    fetchInventory();
   </script>
 </body>
 </html>
