--- a/loyalty.html
+++ b/loyalty.html
@@ -111,13 +111,26 @@
     }
 
     .circle {
-      width: 24px;
-      height: 24px;
-      border-radius: 50%;
-      background: #f3d470; /* gold fill */
-      box-shadow: inset 0 0 3px rgba(0,0,0,0.2);
-      user-select: none;
-    }
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background: #e0e0e0; /* default empty */
+  border: 2px solid #ccc;
+  box-shadow: inset 0 0 3px rgba(0,0,0,0.15);
+  opacity: 0;               /* for animation */
+  transform: scale(0.8);    /* start smaller */
+  transition: all 0.3s ease;
+}
+
+.circle.filled {
+  background: #4caf50; /* green for earned */
+  border: 2px solid #388e3c;
+}
+
+.circle.show {
+  opacity: 1;
+  transform: scale(1);
+}
 
     .circle.empty {
       background: #f9f1d1; /* lighter empty */
@@ -134,9 +147,117 @@
       flex: 0 0 auto;
       user-select: none;
     }
+
+    /* Leaderboard */
+    #leaderboard {
+      max-width: 700px;
+      margin: 0 auto 1.5rem;
+      text-align: center;
+      background: white;
+      padding: 1rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+    #leaderboard h2 {
+      color: #c82333;
+      font-weight: 700;
+      margin-bottom: 0.75rem;
+    }
+
+    /* Leaderboard special card */
+/* Leaderboard special card */
+.leaderboard-card {
+  background: #fff; 
+  border: 2px solid #c82333; /* Burger Shot red */
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.12);
+  padding: 1rem 1.5rem;
+  margin: 0 auto 1.2rem;
+  text-align: center;
+  font-weight: 700;
+  display: inline-block; /* hug content */
+  min-width: 260px;
+}
+
+.leaderboard-card h2 {
+  color: #c82333;
+  font-weight: 800;
+  margin-bottom: 0.6rem;
+  font-size: 1.3rem;
+}
+
+.leaderboard-card p {
+  margin: 0.25rem 0;
+  font-size: 1rem;
+}
+
+.leaderboard-card p strong {
+  font-weight: 800;
+  color: #333;
+}
+
+/* Optional subtle highlight for ranks */
+.leaderboard-card p:nth-child(2) strong {
+  color: #c82333; /* Burger Shot red for #1 */
+}
+.leaderboard-card p:nth-child(3) strong {
+  color: #a71d2a; /* darker red for #2 */
+}
+.leaderboard-card p:nth-child(4) strong {
+  color: #ff8800; /* orange highlight for #3 */
+}
+
+/* Hamburger button */
+.hamburger {
+  display: none;
+  font-size: 2rem;
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #c82333; /* Burger Shot red */
+  margin: 1rem;
+  z-index: 2000;
+  position: fixed;
+  top: 10px;
+  left: 10px;
+}
+
+/* Sidebar adjustments for mobile */
+@media (max-width: 768px) {
+  .hamburger {
+    display: block; /* show hamburger on small screens */
+  }
+
+  .sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 220px;
+    background-color: #c82333;
+    transform: translateX(-100%); /* hidden */
+    transition: transform 0.3s ease;
+    z-index: 1500;
+  }
+
+  .sidebar.active {
+    transform: translateX(0); /* slide in */
+  }
+
+  /* Make sure main content isn’t squeezed */
+  .main-container {
+    flex-direction: column;
+  }
+  main {
+    padding: 1rem;
+    margin-left: 0;
+  }
+}
+
   </style>
 </head>
 <body>
+  <button id="menuToggle" class="hamburger">☰</button>
   <div class="main-container" style="display:flex; width:100%; min-height:100vh;">
     <!-- Sidebar -->
     <aside class="sidebar">
@@ -159,16 +280,33 @@
       <h1>🎁 Customers</h1>
 
       <p style="margin-top:-0.5rem; margin-bottom:1rem; font-weight:600; color:#c82333;">
-  Right now, every 5th visit a customer will receive a free dessert - this will flag up on the order sheet. The reward will increase over time as we grow.
-</p>
+        Right now, every 5th visit a customer will receive a free dessert - this will flag up on the order sheet. 
+        The reward will increase over time as we grow.
+      </p>
 
-      <div class="loyalty-list" id="loyaltyList">
-        <!-- Customer cards will be injected here -->
-      </div>
+      <!-- Search bar -->
+      <input 
+        type="text" 
+        id="searchCustomers" 
+        placeholder="Search customers..." 
+        style="
+          max-width: 400px; 
+          margin: 0 auto 1rem; 
+          padding: 0.6rem 1rem; 
+          border-radius: 10px; 
+          border: 2px solid #c82333; 
+          font-weight: 600; 
+          font-size: 1rem; 
+          display:block;
+        "
+      />
+
+      <!-- Customer list -->
+      <div class="loyalty-list" id="loyaltyList"></div>
     </main>
   </div>
 
-  <script type="module">
+<script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
   import { getFirestore, collection, onSnapshot } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore.js";
 
@@ -205,12 +343,27 @@
       return;
     }
 
+    // 🏆 Leaderboard card (inside loyalty list, centered)
+    // 🏆 Leaderboard card
+const top3 = customers.slice(0, 3);
+const leaderboardCard = document.createElement("div");
+leaderboardCard.className = "leaderboard-card";
+leaderboardCard.innerHTML = `
+  <h2>🏆 Top Customers</h2>
+  ${top3.map(([name, visits], i) =>
+    `<p><strong>${i + 1}. ${capitalizeName(name)}</strong> — ${visits} visits</p>`
+  ).join("")}
+`;
+container.appendChild(leaderboardCard);
+
+
+    // 🎁 Customer cards
     customers.forEach(([name, visits]) => {
       const modVisits = visits % MAX_CIRCLES === 0 ? MAX_CIRCLES : visits % MAX_CIRCLES;
 
       let circlesHTML = "";
       for (let i = 1; i <= MAX_CIRCLES; i++) {
-        circlesHTML += `<div class="circle${i <= modVisits ? "" : " empty"}"></div>`;
+        circlesHTML += `<div class="circle${i <= modVisits ? " filled" : " empty"}"></div>`;
       }
 
       const card = document.createElement("div");
@@ -221,10 +374,25 @@
         <div class="total-visits">Total Visits: ${visits}</div>
       `;
       container.appendChild(card);
+
+      // ✨ Animate circles
+      const circles = card.querySelectorAll(".circle");
+      circles.forEach((c, idx) => {
+        setTimeout(() => c.classList.add("show"), idx * 120);
+      });
     });
   }
 
-  // ✅ Live listener: updates instantly on add/delete/change
+  // 🔍 Filter customers live
+  document.getElementById("searchCustomers").addEventListener("input", (e) => {
+    const term = e.target.value.toLowerCase();
+    document.querySelectorAll(".customer-card").forEach(card => {
+      const name = card.querySelector(".customer-name")?.textContent.toLowerCase() || "";
+      card.style.display = name.includes(term) || card.querySelector("h2") ? "flex" : "none";
+    });
+  });
+
+  // ✅ Live listener
   const ordersCol = collection(db, "orders");
   onSnapshot(ordersCol, (snapshot) => {
     const visitCounts = {};
@@ -240,6 +408,13 @@
     renderLoyalty(visitCounts);
   });
 </script>
+<script>
+  const menuBtn = document.getElementById("menuToggle");
+  const sidebar = document.querySelector(".sidebar");
 
+  menuBtn.addEventListener("click", () => {
+    sidebar.classList.toggle("active");
+  });
+</script>
 </body>
 </html>
