--- a/orders.html
+++ b/orders.html
@@ -183,52 +183,34 @@
       color: white;
     }
 
-    /* Hamburger button */
 .hamburger {
   display: none;
-  font-size: 2rem;
-  background: none;
+  font-size: 1.8rem;
+  background: #c82333;   /* Burger Shot red */
+  color: white;
   border: none;
+  border-radius: 8px;
+  padding: 6px 12px;
   cursor: pointer;
-  color: #c82333; /* Burger Shot red */
-  margin: 1rem;
-  z-index: 2000;
+
   position: fixed;
-  top: 10px;
-  left: 10px;
+  top: 15px;
+  left: 15px;
+  z-index: 3000;         /* always on top */
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  transition: background 0.2s;
 }
 
-/* Sidebar adjustments for mobile */
+.hamburger:hover {
+  background: #a71d2a;   /* darker red on hover */
+}
+
 @media (max-width: 768px) {
   .hamburger {
-    display: block; /* show hamburger on small screens */
-  }
-
-  .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 220px;
-    background-color: #c82333;
-    transform: translateX(-100%); /* hidden */
-    transition: transform 0.3s ease;
-    z-index: 1500;
-  }
-
-  .sidebar.active {
-    transform: translateX(0); /* slide in */
-  }
-
-  /* Make sure main content isn’t squeezed */
-  .main-container {
-    flex-direction: column;
-  }
-  main {
-    padding: 1rem;
-    margin-left: 0;
+    display: block;
   }
 }
+
   </style>
 </head>
 <body>
