--- a/register.html
+++ b/register.html
@@ -504,33 +504,53 @@
   border-color: #ff8800;
   box-shadow: 0 0 6px rgba(255, 136, 0, 0.5);
 }
+/* Hamburger button */
 .hamburger {
   display: none;
-  font-size: 1.8rem;
-  background: #c82333;   /* Burger Shot red */
-  color: white;
+  font-size: 2rem;
+  background: none;
   border: none;
-  border-radius: 8px;
-  padding: 6px 12px;
   cursor: pointer;
-
+  color: #c82333; /* Burger Shot red */
+  z-index: 2000;
   position: fixed;
-  top: 15px;
-  left: 15px;
-  z-index: 3000 !important;         /* always on top */
-  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-  transition: background 0.2s;
+  top: 10px;
+  left: 10px;
 }
 
-.hamburger:hover {
-  background: #a71d2a;   /* darker red on hover */
-}
-
+/* Sidebar adjustments for mobile */
 @media (max-width: 768px) {
   .hamburger {
-    display: block;
+    display: block; /* show hamburger on small screens */
+  }
+
+  .sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 220px;
+    background-color: #c82333;
+    transform: translateX(-100%); /* hidden by default */
+    transition: transform 0.3s ease;
+    z-index: 1500;
+  }
+
+  .sidebar.active {
+    transform: translateX(0); /* slide in when active */
+  }
+
+  /* prevent main content being squished */
+  .main-container {
+    flex-direction: column;
+  }
+
+  main {
+    padding: 1rem;
+    margin-left: 0;
   }
 }
+
   </style>
 </head>
 <body>
@@ -1140,8 +1160,16 @@ if (missing.length > 0) {
 
   menuBtn.addEventListener("click", () => {
     sidebar.classList.toggle("active");
+
+    // Optional: change icon between ☰ and ✖
+    if (sidebar.classList.contains("active")) {
+      menuBtn.textContent = "✖";
+    } else {
+      menuBtn.textContent = "☰";
+    }
   });
 </script>
+
 
 </body>
 </html>
