--- a/staffmeals.html
+++ b/staffmeals.html
@@ -210,7 +210,9 @@
         <option value="Munch">Munch</option>
         <option value="Slade">Slade</option>
         <option value="Jack">Jack</option>
+        <<option value="Stu">Stu</option>
         <option value="Tyrod">Tyrod</option>
+        <option value="James">James</option>
       </select>
     </div>
 
