--- a/register.html
+++ b/register.html
@@ -692,7 +692,9 @@
     <option value="Munch">Munch</option>
     <option value="Slade">Slade</option>
     <option value="Jack">Jack</option>
+    <option value="Stu">Stu</option>
     <option value="Tyrod">Tyrod</option>
+    <option value="James">James</option>
   </select>
 
   <!-- styled fake select -->
