--- a/register.html
+++ b/register.html
@@ -705,7 +705,9 @@
       <div data-value="Munch">Munch</div>
       <div data-value="Slade">Slade</div>
       <div data-value="Jack">Jack</div>
-      <div data-value="Tyrod">Tyrod</div>
+      <option value="Stu">Stu</option>
+      <option value="Tyrod">Tyrod</option>
+      <option value="James">James</option>
     </div>
   </div>
 </div>
