--- a/orders.html
+++ b/orders.html
@@ -185,28 +185,23 @@
 
 .hamburger {
   display: none;
-  font-size: 1.8rem;
-  background: #c82333;   /* Burger Shot red */
-  color: white;
+  font-size: 2rem;
+  background: none;
   border: none;
-  border-radius: 8px;
-  padding: 6px 12px;
   cursor: pointer;
-
+  color: #c82333; /* Burger Shot red */
   position: fixed;
   top: 15px;
   left: 15px;
-  z-index: 3000;         /* always on top */
-  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-  transition: background 0.2s;
+  z-index: 3000; /* stay above everything */
 }
 
-.hamburger:hover {
-  background: #a71d2a;   /* darker red on hover */
-}
-
-/* Sidebar adjustments for mobile */
+/* Mobile behavior */
 @media (max-width: 768px) {
+  .hamburger {
+    display: block; /* show only on small screens */
+  }
+
   .sidebar {
     position: fixed;
     top: 0;
@@ -214,22 +209,22 @@
     height: 100vh;
     width: 220px;
     background-color: #c82333;
-    transform: translateX(-100%); /* hidden by default */
+    transform: translateX(-100%); /* start hidden */
     transition: transform 0.3s ease;
-    z-index: 1500;
+    z-index: 2500;
   }
 
   .sidebar.active {
-    transform: translateX(0); /* slides into view */
+    transform: translateX(0); /* slide in */
   }
 
+  /* prevent main content from squashing */
   .main-container {
     flex-direction: column;
   }
-
   main {
-    padding: 1rem;
     margin-left: 0;
+    padding: 1rem;
   }
 }
 
