--- a/loyalty.html
+++ b/loyalty.html
@@ -414,7 +414,15 @@ container.appendChild(leaderboardCard);
 
   menuBtn.addEventListener("click", () => {
     sidebar.classList.toggle("active");
+
+    // Switch between ☰ and ✖
+    if (sidebar.classList.contains("active")) {
+      menuBtn.textContent = "✖";
+    } else {
+      menuBtn.textContent = "☰";
+    }
   });
 </script>
+
 </body>
 </html>
