--- a/home.html
+++ b/home.html
@@ -492,8 +492,16 @@ onSnapshot(query(collection(db, "orders"), orderBy("timestamp", "desc")), (snaps
 
   menuBtn.addEventListener("click", () => {
     sidebar.classList.toggle("active");
+
+    // Switch between ☰ and ✖
+    if (sidebar.classList.contains("active")) {
+      menuBtn.textContent = "✖";
+    } else {
+      menuBtn.textContent = "☰";
+    }
   });
 </script>
+
 
 </body>
 </html>
