--- a/register.html
+++ b/register.html
@@ -1163,7 +1163,7 @@ if (missing.length > 0) {
   menuBtn.addEventListener("click", () => {
     sidebar.classList.toggle("active");
 
-    // Optional: change icon between ☰ and ✖
+    // Switch between ☰ and ✖
     if (sidebar.classList.contains("active")) {
       menuBtn.textContent = "✖";
     } else {
@@ -1171,7 +1171,6 @@ if (missing.length > 0) {
     }
   });
 </script>
-
 
 </body>
 </html>
