--- a/staffmeals.html
+++ b/staffmeals.html
@@ -395,8 +395,15 @@
 
   menuBtn.addEventListener("click", () => {
     sidebar.classList.toggle("active");
+
+    // Switch between ☰ and ✖
+    if (sidebar.classList.contains("active")) {
+      menuBtn.textContent = "✖";
+    } else {
+      menuBtn.textContent = "☰";
+    }
   });
-</script>  
+</script>
 
 </body>
 </html>
