--- a/market.html
+++ b/market.html
@@ -148,16 +148,23 @@
 .hamburger {
   display: none;
   font-size: 2rem;
-  background: none;
+  background: #c82333;    /* give it the Burger Shot red */
+  color: white;
   border: none;
+  border-radius: 8px;     /* matches other buttons */
+  padding: 6px 12px;
   cursor: pointer;
-  color: #c82333; /* Burger Shot red */
-  margin: 1rem;
-  z-index: 2000;
   position: fixed;
-  top: 10px;
-  left: 10px;
+  top: 15px;
+  left: 15px;
+  z-index: 3000;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.25); /* permanent shadow */
+  transition: background 0.2s;
 }
+.hamburger:hover {
+  background: #a71d2a;
+}
+
 
 /* Sidebar adjustments for mobile */
 @media (max-width: 768px) {
