--- a/orders.html
+++ b/orders.html
@@ -186,14 +186,21 @@
 .hamburger {
   display: none;
   font-size: 2rem;
-  background: none;
+  background: #c82333;    /* give it the Burger Shot red */
+  color: white;
   border: none;
+  border-radius: 8px;     /* matches other buttons */
+  padding: 6px 12px;
   cursor: pointer;
-  color: #c82333; /* Burger Shot red */
   position: fixed;
   top: 15px;
   left: 15px;
-  z-index: 3000; /* stay above everything */
+  z-index: 3000;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.25); /* permanent shadow */
+  transition: background 0.2s;
+}
+.hamburger:hover {
+  background: #a71d2a;
 }
 
 /* Mobile behavior */
