change to register mobile

--- a/register.html
+++ b/register.html
@@ -528,7 +528,7 @@
 /* Mobile behavior */
 @media (max-width: 768px) {
   .hamburger {
-    display: block; /* show only on small screens */
+    display: block !important; /* show only on small screens */
   }
 
   .sidebar {
