employee names fix

--- a/register.html
+++ b/register.html
@@ -716,9 +716,9 @@
       <div data-value="Munch">Munch</div>
       <div data-value="Slade">Slade</div>
       <div data-value="Jack">Jack</div>
-      <option value="Stu">Stu</option>
-      <option value="Tyrod">Tyrod</option>
-      <option value="James">James</option>
+      <div data-value="Stu">Stu</div>
+      <div data-value="Tyrod">Tyrod</div>
+      <div data-value="James">James</div>
     </div>
   </div>
 </div>
